Modified Jenkins File

--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,5 +1,6 @@
 pipeline {
-    stages {
+agent master   
+ stages {
         stage('Build') {
             steps {
                 sh 'mvn -B -DskipTests clean package'
