Modified Jenkins File

--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,5 +1,9 @@
 pipeline {
-agent any   
+agent any
+tool{
+maven 'M-3.6.0' 
+        jdk 'Java 1.8'
+}   
  stages {
         stage('Build') {
             steps {
